------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

February 20 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Special monsters and items now determine their AttachedGod correctly
	* Terrains now also have AttachedGods (mostly depends on material)
	* Horn of fear is now much more powerful
	* Many unfinished things which I do not remember

February 28 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* When player is killed by something when he is fainting the death message now says "killed by a X while helpless".
	
February 28 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Polymorph question should default to the monster that the player last polymorphed to.

February 26 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Zombies are more picky about the brains they want (atleast that's what they say now)
	* Petrus's, angels' and genies' bodyparts disappear when severed.
	* Zombies pick up and use heads if they lack one

February 25 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added two-headed moose
	
February 24 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added ghosts

February 20 2003 Timo Kiviluoto <sonor@phpoint.fi> and
				 Heikki Sairanen<heikki.sairanen@phpoint.net>

	* All items, characters and materials have been attached to some god

February 20 2003 Timo Kiviluoto <sonor@phpoint.fi>

	* Added support for transparent non-walkable tiles
	* Added support for monsters walking through walls
	* Monster generation works now a little better (maybe)

February 20 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added cans filled with mushroom flesh. 
	
February 17 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Dark wizards added 
