@@ -438,3 +438,5 @@ It should be possible to change materials of golems.
 Pets should gain wisdom from trial and error.
 Windows on walls.
 One shoudl be able to wish for a new limb.
+You should be able to wish for anything. (Very problematic, I know)
+Leash
