@@ -330,6 +330,7 @@
 #define FLOATING_EYE_FLESH (FLESH_ID + 34)
 #define MUSHROOM_FLESH (FLESH_ID + 35)
 #define MOOSE_FLESH (FLESH_ID + 36)
+#define MAGPIE_FLESH (FLESH_ID + 37)
 
 #define POWDER_ID (4096 * 6)
 
