@@ -7,6 +7,10 @@ is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
 
+March 07 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* added magpie
+	
 February 20 2003 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Special monsters and items now determine their AttachedGod correctly
